fix: removed dark mode

--- a/styles/flowser.css
+++ b/styles/flowser.css
@@ -257,16 +257,15 @@ p {
 .benefits-right-box {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: flex-start;
   margin-bottom: 20px;
 }
 
 .benefits-right-box-text {
-  width: 92%;
   display: flex;
   flex-direction: column;
-  align-self: top;
+  margin-left: 15px;
 }
 
 .benefits-right-box-text h3 {
@@ -413,7 +412,7 @@ p {
 
 @media (max-width: 1000px) {
   .flowser-screen {
-    padding-top: 120px;
+    margin-top: 120px;
     max-width: 600px;
     width: 100%;
     position: relative;
